# au-ree-placer-pipeline

./: .gitignore  METHODOLOGY.md  README.md  REFACTOR_PROMPT.md  prep_nure.py  pyproject.toml  requirements.txt
configs/idaho_batholith/: config.yaml
configs/montana_placer/: config.yaml
configs/ne_washington/: config.yaml
data/nure/: nure_ne_wa_sediment.csv
ne_wa_ree/: DATA_SOURCES.md  integration_task.py  task1_coplacer_minerals.py  task2_source_lithology.py  task3_geochemical_discrimination.py  task4_volume_estimation.py  task5_energy_fuels_pathway.py  task6_figure6.py  task6_probabilistic_framing.py  task7_au_as_anomaly.py  task8_mine_waste_ree.py
ne_wa_ree/data/geologic/: wa_geology.dbf
ne_wa_ree/data/mrds/: mrds_ne_wa.geojson  mrds_ne_wa_all.geojson
ne_wa_ree/data/nure/: generate_synthetic_nure.py  nure_wa_sediment.csv  nure_wa_synthetic.csv  nure_wa_synthetic.geojson
ne_wa_ree/outputs/geojson/: fig7_integrated_priority_tier.geojson  nure_classified_th_sources.geojson  task1_multicommodity_targets.geojson  task2_source_lithology_scored.geojson
ne_wa_ree/outputs/tables/: integration_weight_sensitivity.csv  task1_site_summary.csv  task2_catchment_scores.csv  task3_summary_stats.csv  task4_volume_tonnage_summary.csv  task5_breakeven_analysis.csv  (+5 more)
pipeline/: integration.py  run_pipeline.py  task1_coplacer.py  task2_lithology.py  task3_geochemistry.py  task4_volume.py  task5_economics.py  task6_framework.py  task7_pathfinder.py  task8_mine_waste.py  task9_ml_targeting.py  utils.py
tests/: test_integration_and_ml.py  test_utils.py
(+17 files in other folders)
