[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "au-ree-placer-pipeline"
version = "0.1.0"
description = "Config-driven geoscience pipeline for placer Au+REE assessment using NURE, MRDS, and WGS datasets"
requires-python = ">=3.10"
dependencies = [
    "fiona>=1.9",
    "geopandas>=1.0.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyproj>=3.6.1",
    "rasterio>=1.4.3",
    "scikit-learn>=1.3",
    "scipy>=1.13.1",
    "shapely>=2.0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
